# resuforge

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md
resuforge/: __init__.py
resuforge/cli/: __init__.py  main.py
resuforge/config/: __init__.py  settings.py
resuforge/cover_letter/: __init__.py  generator.py  prompts.py  verification.py
resuforge/ingestion/: __init__.py  jd_parser.py
resuforge/llm/: __init__.py  anthropic_client.py  base.py  exceptions.py  openai_client.py
resuforge/resume/: __init__.py  ir_schema.py  latex_parser.py  latex_renderer.py
resuforge/tailoring/: __init__.py  engine.py  prompts.py  semantic_diff.py
resuforge/utils/: __init__.py  diff.py  file_utils.py
tests/: conftest.py
tests/fixtures/jds/: data_scientist.txt  ml_engineer.txt  software_engineer.txt
tests/fixtures/resumes/: custom_commands.tex  simple_article.tex
tests/integration/: test_pipeline.py
tests/unit/: test_cli.py  test_config.py  test_cover_letter.py  test_jd_parser.py  test_latex_parser.py  test_latex_renderer.py  test_llm_client.py  test_semantic_diff.py  test_smoke.py  test_tailoring_engine.py
